2008-03-16  Kevin Ollivier  <kevino@theolliviers.com>

        Rubber stamped by Darin.

        Add set-webkit-configuration support for wx port, and centralize
        build dir location setting.

        http://bugs.webkit.org/show_bug.cgi?id=17790

        * jscore.bkl:

2008-03-14  Steve Falkenburg  <sfalken@apple.com>

        PGO build fixes.

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj:

2008-03-14  Oliver Hunt  <oliver@apple.com>

        Reviewed by Maciej.

        Add logic to track whether a function uses a locally scoped eval or requires a closure
        
        Now that we limit eval we can track those uses of eval that operate
        in the local scope and functions that require a closure.  We track
        this information during initial parsing to avoid yet another tree
        walk.

        * JavaScriptCore.exp:
        * kjs/NodeInfo.h:
        * kjs/Parser.cpp:
        (KJS::Parser::didFinishParsing):
        * kjs/Parser.h:
        (KJS::Parser::parse):
        * kjs/grammar.y:
        * kjs/nodes.cpp:
        (KJS::ScopeNode::ScopeNode):
        (KJS::ProgramNode::ProgramNode):
        (KJS::ProgramNode::create):
        (KJS::EvalNode::EvalNode):
        (KJS::EvalNode::create):
        (KJS::FunctionBodyNode::FunctionBodyNode):
        (KJS::FunctionBodyNode::create):
        * kjs/nodes.h:
        (KJS::ScopeNode::):
        (KJS::ScopeNode::usesEval):
        (KJS::ScopeNode::needsClosure):

2008-03-14  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Beth Dakin.

        Fixed another problem with Vector::shrinkCapacity.
        
        moveOverlapping isn't good enough for the case where the buffer hasn't
        changed, because it still destroys the contents of the buffer.

        * wtf/Vector.h:
        (WTF::::shrinkCapacity): Changed to explicitly check whether the call
        to allocateBuffer produced a new buffer. If it didn't, there's no need
        to move.
